syntax = "proto3";

package myservice;

message Student {
  int32 age = 1;
  float average_score = 2;
  string name = 3;
}

message Book {
  string isbn = 1;
  string author_name = 2;
  int32 pages_amount = 3;
}

service MyService {
  rpc GetStudentInfo (Student) returns (Student);
  rpc GetBookInfo (Book) returns (Book);
}
